# multi-agent-system

./: .gitignore  README.md  launcher.py  pyproject.toml  requirements.txt
backend/: LATENT_INTEGRATION_LOG.md  cli.py
backend/coder/: __init__.py  prompts.yaml  qa_prompts.yaml  template.jinjia2
backend/core/: conf.py  developer.py  evaluation.py  evolving_agent.py  evolving_framework.py  exception.py  experiment.py  knowledge_base.py  prompts.py  proposal.py  scenario.py  template.py  utils.py
backend/debug/: __init__.py  analyzers.py  collectors.py  events.py  monitor.md  monitor.py  storage.py
backend/eksternal/: __init__.py  base.py  fundamental.py  makro.py  manager.py  news.py  technical.py
backend/factors/: experiment.py  feedback.py  latent_proposal.py  library.py  proposal.py  qlib_coder.py  qlib_utils.py  runner.py  workspace.py
backend/llm/: __init__.py  _shared.py  client.py  config.py  guided_decoding.py  models.py  percobaan.ipynb
backend/log/: __init__.py  time.py
backend/pipeline/: factor_backtest.py  factor_from_report.py  factor_mining.py  insight.py  (+3 more)
configs/: .env.example  backtest.yaml  experiment.yaml
eksternal/: news.py
experiment/: generate_prompt.py
hf_data/: README.md
try/: __init__.py  common.py  config.py  fixtures.py  probe.py  run.py  test_coder_evaluator.py  test_construct_repro.py  test_construct_repro_chained.py  test_evolution_rekayasa.py  test_external.py  test_kv_probe_v2.py  test_multi_agent_kv.py  test_pair_construct_coder.py  test_pair_propose_construct.py  test_planning_evolution.py  test_proposal_feedback.py
(+1071 files in other folders)
